--- a/src/App.css
+++ b/src/App.css
@@ -31,13 +31,13 @@
     --color-bg-secondary: #283141;
     --color-text-primary: #dbdbdb;
     --color-text-secondary: #e2e8f0;
-    --color-text-accent: #81e6d9;
+    --color-text-accent: #489bd6;
     --color-bg-input: #4a5361;
     --color-bg-button: #81e6d9;
 }
 .light{
     --color-bg-primary: #fff;
-    --color-bg-secondary: #edf2f7;
+    --color-bg-secondary: #98b9d9;
     --color-text-primary: #2d3748;
     --color-text-secondary: #4a5568;
     --color-text-accent: #2b6cb0;
